<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Register_Page"
    android:background="#eeeeee"
    android:layoutDirection="rtl">

    <ImageView
        android:id="@+id/img_Register"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:src="@drawable/register"
        android:layout_gravity="center"
        android:layout_margin="20dp"/>

    <TextView
        android:id="@+id/txtTitleRegister"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginRight="5dp"
        android:layout_weight="0.1"
        android:text="@string/txtTitelRegister"
        android:layout_margin="5dp"
        android:textSize="13sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:orientation="horizontal"
        android:layout_gravity="right"
        android:layoutDirection="rtl">

       <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/txtName"
            android:inputType="textPersonName"
            android:ems="10"
            android:hint="@string/txtName"
            android:paddingStart="5dp"
            android:drawableStart="@drawable/ic_person"
            android:background="@drawable/round_corner"
            />

        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:id="@+id/txtFamily"
            android:inputType="textPersonName"
            android:ems="10"
            android:hint="@string/txtFamily"
            android:paddingStart="5dp"
            android:drawableStart="@drawable/ic_person"
            android:background="@drawable/round_corner"/>

    </LinearLayout>

    <EditText
        android:id="@+id/txtPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:ems="11"
        android:drawableStart="@drawable/ic_phone"
        android:hint="@string/txtPhoneNumber"
        android:inputType="phone"
        android:background="@drawable/round_corner"
        android:layout_margin="5dp"
        android:paddingStart="10dp"/>

    <EditText
        android:id="@+id/txtAddress"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:ems="10"
        android:drawableStart="@drawable/ic_place"
        android:hint="@string/txtAddress"
        android:inputType="text"
        android:background="@drawable/round_corner"
        android:layout_margin="5dp"
        android:paddingStart="10dp"/>
    <EditText
        android:id="@+id/txtUserName"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:ems="10"
        android:hint="@string/txtUsername"
        android:layoutDirection="rtl"
        android:inputType="text"
        android:background="@drawable/round_corner"
        android:drawableStart="@drawable/ic_person"
        android:layout_margin="5dp"
        android:paddingStart="10dp"/>
    <EditText
        android:id="@+id/txtPass"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:ems="10"
        android:inputType="textPassword"
        android:background="@drawable/round_corner"
        android:hint="@string/txtPassword"
        android:paddingStart="10dp"
        android:layout_margin="5dp"
        android:drawableStart="@drawable/ic_security"/>




    <android.support.v7.widget.CardView
        android:layout_width="250dp"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:layout_gravity="center"
        app:cardBackgroundColor="@android:color/holo_red_dark"
        app:cardCornerRadius="30dp"
        app:cardElevation="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtCardView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ثبت  نام"
                android:textColor="#ffffff"
                android:textSize="15sp"
                android:layout_centerInParent="true"/>
        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/txtViewLogin"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:layout_marginRight="5dp"
        android:layout_weight="0.1"
        android:onClick="login"
        android:text="@string/txtViewLogin"
        android:textSize="15sp" />

</LinearLayout>