<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/login1"
    tools:context=".Login_Page">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:layout_gravity="center"
        android:layout_margin="30dp"
        app:srcCompat="@drawable/login"
        />

    <EditText
        android:id="@+id/txtUserName"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:ems="10"
        android:hint="@string/txtUsername"
        android:background="@drawable/round_corner"
        android:layout_margin="20dp"
        android:inputType="textPersonName"
        android:drawableEnd="@drawable/ic_person"
        android:paddingEnd="10dp"
         />

    <EditText
        android:id="@+id/txtPass"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:ems="20"
        android:inputType="textPassword"
        android:background="@drawable/round_corner"
        android:hint="@string/txtPassword"
        android:paddingEnd="10dp"
        android:layout_margin="20dp"
        android:drawableEnd="@drawable/ic_security" />


    <CheckBox
        android:id="@+id/ch_ForgetPassword"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:layout_marginEnd="10dp"
        android:text="@string/ch_ForgetPass"
        android:textSize="15sp"
        android:layoutDirection="rtl"/>

    <android.support.v7.widget.CardView
        android:layout_width="250dp"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:layout_gravity="center"
        app:cardBackgroundColor="@android:color/holo_red_dark"
        app:cardCornerRadius="30dp"
        app:cardElevation="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtCardView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ورود به حساب کاربری"
                android:textColor="#ffffff"
                android:textSize="15sp"
                android:layout_centerInParent="true"/>
        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:layout_weight="0.2"
        android:onClick="registration"
        android:text="@string/txt_NotRegister"
        android:textColor="#ffffff"
        android:textSize="15dp" />
</LinearLayout>